k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  #Service name
  name: tt-pricing-svc
spec:
  selector:
    app: tokentax-infra-209601 
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
