k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "main-ip"
spec:
  # tls:
  # - secretName: main-https
  #   hosts:
  #   - test3.tokentax.us
  #   - beta3.tokentax.us
  rules:
  - host: test3.tokentax.us
    http:
      paths:
      - path: /
        backend:
          serviceName: tt-pricing-svc
          servicePort: 80
  - host: beta3.tokentax.us
    http:
      paths:
      - path: /
        backend:
          serviceName: tt-pricing-svc
          servicePort: 80
